--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.15.2
+  cloud_firestore: ^5.6.12
+  provider: ^6.1.5
+  firebase_auth: ^5.7.0
+  geolocator: ^14.0.2
+  latlong2: ^0.9.1
+  flutter_map: ^8.1.1
 
 dev_dependencies:
   flutter_test:
