--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,5 +57,6 @@
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
-  "cmake.sourceDirectory": "C:/Users/sindh/python/driver_application/linux"
+  "cmake.sourceDirectory": "C:/Users/sindh/python/driver_application/linux",
+  "java.configuration.updateBuildConfiguration": "interactive"
 }
